# dotfiles

./: .gitignore  README.md  bootstrap.sh  pyproject.toml  tasks.py
configs/: config.yaml
configs/alacritty/: alacritty.toml
configs/eca/: config.json
configs/etc/: aerospace.toml  bashrc  eca_config.json  inputrc  p10k.zsh  starship.toml
configs/nvim/: lazy-lock.json  pyproject.toml
configs/nvim/lua/config/: keymaps.lua  lazy.lua  lspconfig.lua  options.lua
configs/nvim/lua/plugins/: blink-cmp.lua  colorscheme-tokionight.lua  editor_code_assistant.lua  lualine.lua  nvim-tmux-navigation.lua
configs/nvim/lua/plugins/archive/: copilot-vim.lua
configs/others/: bashrc
configs/tmux/: tmux.conf
configs/zsh/: zshrc  zshrc_linux
